ARM Docker image build add: #16

--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -15,22 +15,36 @@ on:
       - '.github/workflows/docker-build-image.yml'
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Set up Docker
+        uses: crazy-max/ghaction-setup-docker@v3
+        with:
+          daemon-config: |
+            {
+              "debug": true,
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_LOGIN }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: actions/checkout@v4
+
       - name: Build and push the Docker image for KNP build
         uses: docker/build-push-action@v6
         with:
+          platforms: linux/amd64,linux/arm64
           context: "{{defaultContext}}:docker/build-image"
+          load: true
           push: true
-          tags: ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image:latest
+          tags: kasperskydh/knp-build-image:latest
           timeout-minutes: 180
           continue-on-error: false
