Docker hub login and password set from variables: #16

--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -45,6 +45,6 @@ jobs:
           context: "{{defaultContext}}:docker/build-image"
           load: true
           push: true
-          tags: kasperskydh/knp-build-image:latest
+          tags: ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image:latest
           timeout-minutes: 180
           continue-on-error: false
