--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -35,16 +35,18 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_LOGIN }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+          username: $DOCKERHUB_LOGIN
+          password: $DOCKERHUB_TOKEN
       - name: Build and push the Docker image for KNP build
         uses: docker/build-push-action@v6
+        env:
+          DOCKERHUB_LOGIN: ${{ vars.DOCKERHUB_LOGIN }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         with:
           platforms: linux/amd64,linux/arm64
           context: "{{defaultContext}}:docker/build-image"
           load: true
           push: true
-          tags: ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image:latest
+          tags: $DOCKERHUB_LOGIN/knp-build-image:latest
           timeout-minutes: 180
           continue-on-error: false
