--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: $DOCKERHUB_LOGIN
-          password: $DOCKERHUB_TOKEN
+          username: ${{ vars.DOCKERHUB_LOGIN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push the Docker image for KNP build
         uses: docker/build-push-action@v6
         env:
