--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -39,14 +39,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push the Docker image for KNP build
         uses: docker/build-push-action@v6
-        env:
-          DOCKERHUB_LOGIN: ${{ vars.DOCKERHUB_LOGIN }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         with:
           platforms: linux/amd64,linux/arm64
           context: "{{defaultContext}}:docker/build-image"
           load: true
           push: true
-          tags: $DOCKERHUB_LOGIN/knp-build-image:latest
+          tags: ${{ vars.DOCKERHUB_LOGIN }}/knp-build-image:latest
           timeout-minutes: 180
           continue-on-error: false
